--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <button  id="fire" >CONNECT WALLET</button>
    <button  id="spell" >MINT NFT</button>
    <button  id="download" >DOWNLOAD MODEL</button>
+   <button  id="ar" >DOWNLOAD AR</button>
 </div>
   
 
@@ -109,7 +110,7 @@
         <div class="HUDmain">
           <div class="HUDcontainer">
 
-            <div id="fire" class="hexButton"></div>
+   <!--          <div id="fire" class="hexButton"></div>
             <div id="spell"class="hexButton"></div>
             <div id="health"class="hexButton"></div>
             <div class="hexButton"></div>
@@ -120,7 +121,7 @@
             <div class="hexButton"></div>
             <div class="hexButton"></div>
             <div class="hexButton"></div>
-            <div class="hexButton"></div>
+            <div class="hexButton"></div> -->
       
    
           </div>
