--- a/index.html
+++ b/index.html
@@ -14,60 +14,59 @@
 <body>
    
 
-<div id="web3">
-   <button  id="fire" >CONNECT WALLET</button>
-   <button  id="spell" >MINT NFT</button>
-   <button  id="download" >DOWNLOAD MODEL</button>
-   <button  id="ar" >DOWNLOAD AR</button>
-</div>
+   <div id="web3">
+       <button  id="fire" >CONNECT WALLET</button>
+       <button  id="spell" >MINT NFT</button>
+       <button  id="download" >DOWNLOAD MODEL</button>
+       <button  id="ar" >DOWNLOAD AR</button>
+  </div>
   
 
     <div id="HUD">
-        <img class="logo" src= "assets/STS9_logo.png" /> 
-      
 
-<!--    <button  id="fire" >Fire</button>
-        <button  id="spell" >Spell</button>
-        <button  id="health" >Health</button>
-        <button  id="shield" >Shield</button> -->
+        <img class="logo" src= "assets/STS9_logo.png" /> 
 
         <div id="picker"></div>
 
-     <div class="dial-container">
-  <div class="donut-chart-block block">
-    <div class="donut-chart">
-      <div id="section1" class="clip">
+    <div class="dial-container">
+        <div class="donut-chart-block block">
+        <div class="donut-chart">
+        <div id="section1" class="clip">
         <div class="item"></div>
-      </div>
-      <div id="section2" class="clip">
-        <div class="item"></div>
-      </div>
-      <div id="section3" class="clip">
-        <div class="item"></div>
-      </div>
-      <div class="center">
-        <span></span>
-      </div>
     </div>
-  </div>
-  <div class="range-slider" >
-    <input type="range" orient="vertical" min="0" max="100" id="metalRange" />
-    <div class="range-slider__bar"></div>
-    <div class="range-slider__thumb"></div>
-  </div>
-</div>
 
-     <div class="dial-container">
+    <div id="section2" class="clip">
+        <div class="item"></div>
+    </div>
+
+    <div id="section3" class="clip">
+        <div class="item"></div>
+    </div>
+
+    <div class="center">
+        <span></span>
+    </div>
+    </div>
+    </div>
+
+   <div class="range-slider" >
+       <input type="range" orient="vertical" min="0" max="100" id="metalRange" />
+       <div class="range-slider__bar"></div>
+       <div class="range-slider__thumb"></div>
+     </div>
+     </div>
+
+  <div class="dial-container">
   <div class="donut-chart-block block">
     <div class="donut-chart">
-      <div id="section1" class="clip">
-        <div class="item"></div>
-      </div>
-      <div id="section2" class="clip">
-        <div class="item"></div>
-      </div>
-      <div id="section3" class="clip">
-        <div class="item"></div>
+    <div id="section1" class="clip">
+    <div class="item"></div>
+    </div>
+  <div id="section2" class="clip">
+    <div class="item"></div>
+    </div>
+    <div id="section3" class="clip">
+    <div class="item"></div>
       </div>
       <div class="center">
         <span></span>
@@ -81,56 +80,33 @@
   </div>
 </div>
 
- <!--    <p>Value: <span id="demo"></span></p>
-    <p>Value: <span id="demo2"></span></p> -->
 
 
-<!-- 
-      <div class="slidecontainer">
-        <input type="range" min="0" max="100" value="0" class="slider" >
-          <p>Value: <span id="demo"></span></p>
+  <div id = "hex" class='hexbuttons'>
+      <span id="1" class='green'></span>
+      <span id="2" class='green'></span>
+      <br>
+      <span id="3" class='green'></span>
+      <span id="4" class='green'></span>
+      <span id="5" class='green'></span>
+      <br>
+      <span id="6" class='green'></span>
+      <span id="7" class='green'></span>
+  </div>
+
+  <div class="HUDmain">
+      <div class="HUDcontainer"> </div>
       </div>
-
-      <div class="slidecontainer">
-        <input type="range" min="0" max="100" value="0" class="slider" id="roughRange">
-          <p>Value: <span id="demo2"></span></p>
-      </div> -->
-
-      <div class="slidecontainer">
-        <input type="range" min="0" max="100" value="50" class="slider" id="envRange">
-          <p>Value: <span id="demo3"></span></p>
-      </div>
-
-    <!--   <div id="color-picker-wrapper">
-        <span class="colorPicker" ><input id="body-color" type="color" value="#ff0000"></input></span>
-      </div> -->
-
-
-
-        <div class="HUDmain">
-          <div class="HUDcontainer">
-
-   <!--          <div id="fire" class="hexButton"></div>
-            <div id="spell"class="hexButton"></div>
-            <div id="health"class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div>
-            <div class="hexButton"></div> -->
-      
-   
-          </div>
-        </div>
-
-    </div>
+  </div>
 
 
 <div id="container">
+
+  <section id="loading-screen">
+
+  <div id="loader"></div>
+
+  </section>
   
 </div>
 
